# safer

./: README.md  background.c  gui.c  gui.h  gui_functions.c  gui_functions.h  hat.py  install_service.sh  main.c  meson.build  receiver.c  sender.c  theme.css  utils.c  utils.h  worker.c  worker.h
python/: bat.py  bat.service  hat.py
src/: gui.c  gui.h  gui_functions.c  gui_functions.h  main.c  power-monitor.c  power-monitor.h  utils.c  utils.h  worker.c  worker.h
x708/: install.sh  rtc.service  xPWR.sh
